Added virtual thread executors for Player Data components, Pokemon, and Command parsing - Fixed general type augments not being available for most Pokemon